Almost there-ish

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <div id="sq6">6</div>
         <div id="sq7">7</div>
         <div id="sq8">8</div>
-    </section>    
+    </section>  
+    <button id = "reset">Reset Button</button>  
 </body>
 </html>
