--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <script defer src="js/main.js"></script>
     <title>Tic Tac Toe</title>
 
@@ -13,18 +14,19 @@
 <body>
     <h1>Tic-Tac-Toe</h1>
     <h2 id="message">Message</h2>
-
     <section class="board">
-        <div id="sq0">0</div>
-        <div id="sq1">1</div>
-        <div id="sq2">2</div>
-        <div id="sq3">3</div>
-        <div id="sq4">4</div>
-        <div id="sq5">5</div>
-        <div id="sq6">6</div>
-        <div id="sq7">7</div>
-        <div id="sq8">8</div>
-    </section>  
+        <div class="theSquares" id="sq0"></div>
+        <div class="theSquares" id="sq1"></div>
+        <div class="theSquares" id="sq2"></div>
+        <div class="theSquares" id="sq3"></div>
+        <div class="theSquares" id="sq4"></div>
+        <div class="theSquares" id="sq5"></div>
+        <div class="theSquares" id="sq6"></div>
+        <div class="theSquares" id="sq7"></div>
+        <div class="theSquares" id="sq8"></div>
+    </section>    
+    <div id = "resetDiv">
     <button id = "reset">Reset Button</button>  
+    </div> 
 </body>
 </html>
